[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/characters/big_demon/big_demon_run_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/big_demon/big_demon_run_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/big_demon/big_demon_idle_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/big_demon/big_demon_run_anim_f1.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/big_demon/big_demon_run_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/big_demon/big_demon_idle_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://assets/characters/big_demon/big_demon_idle_anim_f2.png" type="Texture" id=7]
[ext_resource path="res://assets/characters/big_demon/big_demon_idle_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://src/characters/BigDemon.gd" type="Script" id=9]
[ext_resource path="res://src/projectiles/GlueSpatter.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/Audio/Glue Landing.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 21.104
height = 18.8704

[sub_resource type="CircleShape2D" id=3]
radius = 306.918

[node name="BigDemon" type="KinematicBody2D" groups=[
"enemies",
"glueable",
]]
script = ExtResource( 9 )
GlueSpatter = ExtResource( 10 )

[node name="BDSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="BDShape" type="CollisionShape2D" parent="."]
position = Vector2( -0.572372, 6.53214 )
shape = SubResource( 2 )

[node name="DetectRadius" type="Area2D" parent="."]

[node name="DetectShape" type="CollisionShape2D" parent="DetectRadius"]
position = Vector2( -1.12375, 6.36781 )
shape = SubResource( 3 )

[node name="GlueLanding" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
